fix: change visible in mobile

--- a/app/sections/main_page/TradingMarketSection.module.scss
+++ b/app/sections/main_page/TradingMarketSection.module.scss
@@ -87,6 +87,7 @@
 
   &__options {
     display: flex;
+    flex-wrap: wrap;
     gap: 4px;
   }
 
