--- a/components/map_component/MapBoxComponent.module.scss
+++ b/components/map_component/MapBoxComponent.module.scss
@@ -48,7 +48,6 @@
     background-color: $classicWhiteBackgroundColor;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
     opacity: 1;
-
     cursor: pointer;
     user-select: none;
     border: 1px solid $brandColorDarkGreen;
@@ -58,10 +57,13 @@
     @include for-size(laptop) {
       &:hover {
         background-color: $brandColorDarkGreen;
-
         .map__buttonText {
           color: $classicWhiteBackgroundColor;
         }
+      }
+
+      &:active {
+        transform: translateY(1px);
       }
     }
   }
